cleanup pom.xml