@@ -63,7 +63,6 @@
       <scope>provided</scope>
     </dependency>
 
-
     <!-- Tests -->
     <dependency>
       <groupId>org.apache.druid</groupId>
@@ -74,20 +73,8 @@
     </dependency>
     <dependency>
       <groupId>org.apache.druid</groupId>
-      <artifactId>druid-sql</artifactId>
-      <version>${druid.version}</version>
-      <type>test-jar</type>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.druid</groupId>
       <artifactId>druid-benchmarks</artifactId>
       <version>${druid.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>com.google.guava</groupId>
-      <artifactId>guava</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -107,22 +94,12 @@
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-migrationsupport</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.vintage</groupId>
       <artifactId>junit-vintage-engine</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.reflections</groupId>
-      <artifactId>reflections</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -158,7 +135,15 @@
         <configuration>
           <argLine>
              -Duser.timezone=UTC
+             --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
+             --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED
+             --add-opens=java.base/java.nio=ALL-UNNAMED
              --add-opens=java.base/sun.nio.ch=ALL-UNNAMED
+             --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
+             --add-opens=java.base/java.io=ALL-UNNAMED
+             --add-opens=java.base/java.lang=ALL-UNNAMED
+             --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+             --add-opens=java.base/java.util=ALL-UNNAMED
           </argLine>
           <redirectTestOutputToFile>true</redirectTestOutputToFile>
         </configuration>
@@ -207,3 +192,4 @@
     </plugins>
   </build>
 </project>
+
